--- a/ssh/config
+++ b/ssh/config
@@ -1,35 +1,14 @@
-# Cloud server with yubikey nano
-Host cloud-nano
-    HostName henrikz.net
-    User henrik
-    IdentityFile ~/.ssh/id_ecdsa_sk_nano
-    RequestTTY force
-
-# Cloud server with USB-C yubikey
-Host cloud
+Host electron
     HostName henrikz.net
     User henrik
     IdentityFile ~/.ssh/id_ecdsa_sk
-    RequestTTY force
-
-# raspberrypi with yubikey nano
-Host rpi-nano
-    Hostname raspberrypi.lan
-    User pi
     IdentityFile ~/.ssh/id_ecdsa_sk_nano
     RequestTTY force
 
-# raspberry pi with USB-C yubikey
-Host rpi
-    Hostname raspberrypi.lan
+Host proton 
+    Hostname proton.lan
     User pi
     IdentityFile ~/.ssh/id_ecdsa_sk
+    IdentityFile ~/.ssh/id_ecdsa_sk_nano
     RequestTTY force
 
-
-# DKFZ simulation server 
-Host v100
-    Hostname 10.133.24.118
-    User v100
-    ForwardAgent yes
-    ForwardX11 yes
