--- a/yabai/.yabairc
+++ b/yabai/.yabairc
@@ -1,3 +1,8 @@
+# for this to work you must configure sudo such that
+# it will be able to run the command without password
+yabai -m signal --add event=dock_did_restart action="sudo yabai --load-sa"
+sudo yabai --load-sa
+
 # default layout (can be bsp, stack or float)
 yabai -m config layout bsp
 
@@ -15,7 +20,7 @@ yabai -m config right_padding 10
 yabai -m config window_gap 10
 
 # center mouse on window with focus
-yabai -m config mouse_follows_focus on
+yabai -m config mouse_follows_focus off
 
 # modifier for clicking and dragging with mouse
 yabai -m config mouse_modifier alt
