--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -21,14 +21,20 @@ order += "tztime local"
 
 cpu_usage {
     format = " %usage"
+    degraded_threshold = 50
+    max_threshold = 90
 }
 
 cpu_temperature 0 {
 	format = " %degrees°C"
+    max_threshold = 60
+    path = "/sys/class/thermal/thermal_zone1/temp"
 }
 
 memory {
     format = "󰍛 %used"
+    threshold_degraded = 50%
+    threshold_critical = 10%
 }
 
 disk "/" {
