--- a/i3/config
+++ b/i3/config
@@ -58,7 +58,7 @@ mouse_warping none
 for_window [title="Figure*"] floating enable
 
 # start a terminal
-bindsym Mod1+t exec i3-sensible-terminal
+bindsym Mod1+t exec --no-startup-id alacritty
 
 # start browser
 bindsym Mod1+b exec firefox
