--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,3 +10,6 @@ bind -n C-4 send-keys "C-4"
 
 set-option -g mouse on
 
+# Set the default terminal mode to 256color mode
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
