--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,13 +3,15 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-bind -n C-1 send-keys "C-1"
-bind -n C-2 send-keys "C-2"
-bind -n C-3 send-keys "C-3"
-bind -n C-4 send-keys "C-4"
-
 set-option -g mouse on
 
 # Set the default terminal mode to 256color mode
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
+
+# set escape-time to 10ms
+set-option -sg escape-time 10
+
+# window title string
+set -g set-titles on
+set -g set-titles-string '#W'
