--- a/yabai/.skhdrc
+++ b/yabai/.skhdrc
@@ -32,18 +32,32 @@ lalt - space : yabai -m window --toggle split
 shift + lalt - space : yabai -m window --toggle float
 
 # create and destroy space
-lalt - n : yabai -m space --create
+lalt - n : yabai -m space --create && \
+                   index="$(yabai -m query --spaces --display | jq 'map(select(."is-native-fullscreen" == false))[-1].index')" && \
+                   yabai -m space --focus "${index}"
 lalt - d : yabai -m space --destroy
+lalt - p : $HOME/dotfiles/yabai/prune_spaces.sh
 
-# move spaces
-lalt - 1 : yabai -m space --focus 1
-lalt - 2 : yabai -m space --focus 2
-lalt - 3 : yabai -m space --focus 3
-lalt - 4 : yabai -m space --focus 4
+
+# move to space
+lalt - 1 : $HOME/dotfiles/yabai/move_to_space.sh 1
+lalt - 2 : $HOME/dotfiles/yabai/move_to_space.sh 2
+lalt - 3 : $HOME/dotfiles/yabai/move_to_space.sh 3
+lalt - 4 : $HOME/dotfiles/yabai/move_to_space.sh 4
+lalt - 5 : $HOME/dotfiles/yabai/move_to_space.sh 5
+lalt - 6 : $HOME/dotfiles/yabai/move_to_space.sh 6
+lalt - 7 : $HOME/dotfiles/yabai/move_to_space.sh 7
+lalt - 8 : $HOME/dotfiles/yabai/move_to_space.sh 8
+lalt - 9 : $HOME/dotfiles/yabai/move_to_space.sh 9
 
 # move window to space
-ctrl + lalt - 1 : yabai -m window --space 1; yabai -m space --focus 1
-ctrl + lalt - 2 : yabai -m window --space 2; yabai -m space --focus 2
-ctrl + lalt - 3 : yabai -m window --space 3; yabai -m space --focus 3
-ctrl + lalt - 4 : yabai -m window --space 4; yabai -m space --focus 4
+shift + lalt - 2 : yabai -m window --space 2; yabai -m space --focus 2
+shift + lalt - 1 : yabai -m window --space 1; yabai -m space --focus 1
+shift + lalt - 3 : yabai -m window --space 3; yabai -m space --focus 3
+shift + lalt - 4 : yabai -m window --space 4; yabai -m space --focus 4
+shift + lalt - 5 : yabai -m window --space 5; yabai -m space --focus 5
+shift + lalt - 6 : yabai -m window --space 6; yabai -m space --focus 6
+shift + lalt - 7 : yabai -m window --space 7; yabai -m space --focus 7
+shift + lalt - 8 : yabai -m window --space 8; yabai -m space --focus 8
+shift + lalt - 9 : yabai -m window --space 9; yabai -m space --focus 9
 
