fixed: base 1 indexing for windows

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,8 +1,10 @@
+# vim motions for pane navigation
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# use mouse to resize panes
 set-option -g mouse on
 
 # Set the default terminal mode to 256color mode
@@ -15,3 +17,8 @@ set-option -sg escape-time 10
 # window title string
 set -g set-titles on
 set -g set-titles-string '#W'
+
+# base 1 indexing for windows and panes
+set -g base-index 1
+setw -g pane-base-index 1
+
