--- a/alacritty/.alacritty.toml
+++ b/alacritty/.alacritty.toml
@@ -10,9 +10,7 @@ bold        = { family = "DroidSansM Nerd Font", style = "Bold" }
 italic      = { family = "DroidSansM Nerd Font", style = "Italic" }
 bold_italic = { family = "DroidSansM Nerd Font", style = "Bold Italic" }
 
-
-
-# Colors (Kanagawa Wave)
+# Colors scheme (Kanagawa Wave)
 # Source https//github.com/rebelot/kanagawa.nvim
 [colors.primary]
 background = '#1f1f28'
