--- a/yabai/.yabairc
+++ b/yabai/.yabairc
@@ -1,3 +1,7 @@
+# get spaces management to work (Disable SIP!)
+yabai -m signal --add event=docker_did_restart action="sudo yabai --load-sa"
+sudo yabai --load-sa
+
 # default layout (can be bsp, stack or float)
 yabai -m config layout bsp
 
