--- a/yabai/.yabairc
+++ b/yabai/.yabairc
@@ -34,3 +34,4 @@ yabai -m mouse_drop_action swap
 yabai -m rule --add app="^System Settings$" manage=off mouse_follows_focus=off
 yabai -m rule --add app="^Calculator$" manage=off
 yabai -m rule --add app="iStat Menus.*" manage=off mouse_follows_focus=off
+yabai -m rule --add title=".*Figure.*" manage=off
