updated: tmux visuals

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,18 +7,27 @@ bind l select-pane -R
 # use mouse to resize panes
 set-option -g mouse on
 
-# Set the default terminal mode to 256color mode
-set -g default-terminal "tmux-256color"
-set -ag terminal-overrides ",xterm-256color:RGB"
+# status bar
+set -g status-style "fg=#665c54"
+set -g status-left-style "fg=#928374"
 
-# set escape-time to 10ms
+set -g status-bg default
+set -g status-position top
+set -g status-interval 1
+set -g status-left ""
+set -g status-right ""
+
+# set escape-time to 10ms (for neovim)
 set-option -sg escape-time 10
-
-# window title string
-set -g set-titles on
-set -g set-titles-string '#W'
 
 # base 1 indexing for windows and panes
 set -g base-index 1
 setw -g pane-base-index 1
 
+# rename panes to current working directory
+set-option -g automatic-rename on
+set-option -g automatic-rename-format '#{b:pane_current_path}'
+
+# Set the default terminal mode to 256color mode
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
