fix(tmux): sort sessions by time

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,7 +8,7 @@ bind l select-pane -R
 set-option -g mouse on
 
 # status bar
-set -g status-style "fg=#665c54"
+set -g status-style "fg=#665C54"
 set -g status-left-style "fg=#928374"
 
 set -g status-bg default
@@ -26,7 +26,9 @@ setw -g pane-base-index 1
 
 # rename panes to current working directory
 set-option -g automatic-rename on
-set-option -g automatic-rename-format '#{b:pane_current_path}'
+set-option -g automatic-rename-format "#{b:pane_current_path}"
+
+bind s choose-tree -Zs -O time -F "#{session_windows}"
 
 # Set the default terminal mode to 256color mode
 set -g default-terminal "tmux-256color"
