added(tmux): script to fzf into directory when creating new window

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -23,6 +23,9 @@ set-option -sg escape-time 10
 # base 1 indexing for windows and panes
 set -g base-index 1
 setw -g pane-base-index 1
+set -g renumber-windows on
+
+bind-key c run "tmux new-window 'bash $DOTFILES/tmux/fzf-new-window.sh'"
 
 # rename panes to current working directory
 set-option -g automatic-rename on
