--- a/yabai/.yabairc
+++ b/yabai/.yabairc
@@ -11,21 +11,17 @@ yabai -m config window_shadow float
 # New window spawns to the right if vertical split, or bottom if horizontal split
 yabai -m config window_placement second_child
 
-# padding set to 12px
-yabai -m config top_padding 10
-yabai -m config bottom_padding 10
-yabai -m config left_padding 10
-yabai -m config right_padding 10
-yabai -m config window_gap 10
+# remove padding
+yabai -m config top_padding 0
+yabai -m config bottom_padding 0
+yabai -m config left_padding 0
+yabai -m config right_padding 0
+yabai -m config window_gap 0
 
 # center mouse on window with focus
 yabai -m config mouse_follows_focus off
 
-# modifier for clicking and dragging with mouse
-yabai -m config mouse_modifier alt
-# set modifier + left-click drag to move window
-yabai -m config mouse_action1 move
-# set modifier + right-click drag to resize window
+yabai -m rule --add-app=".*" sub-layer=normal
 
 # when window is dropped in center of another window, swap them (on edges it will split it)
 yabai -m mouse_drop_action swap
@@ -35,3 +31,5 @@ yabai -m rule --add app="^System Settings$" manage=off mouse_follows_focus=off
 yabai -m rule --add app="^Calculator$" manage=off
 yabai -m rule --add app="iStat Menus.*" manage=off mouse_follows_focus=off
 yabai -m rule --add title=".*Figure.*" manage=off
+
+yabai -m rule --apply
