feat: kanata config install script and install instructions

--- a/kanata/com.henrikzujeddeloh.kanata.plist
+++ b/kanata/com.henrikzujeddeloh.kanata.plist
@@ -3,12 +3,12 @@
 <plist version="1.0">
 <dict>
     <key>Label</key>
-    <string>com.user.kanata</string>
+    <string>com.henrikzujeddeloh.kanata</string>
     <key>ProgramArguments</key>
     <array>
-        <string>/path/to/kanata</string>
+        <string>/usr/local/bin/kanata</string>
         <string>-c</string>
-            <string>/Users/henrikzujeddeloh/dotfiles/kanata/kanata.kbd</string>
+        <string>/Users/henrikzujeddeloh/dotfiles/kanata/kanata.kbd</string>
     </array>
     <key>RunAtLoad</key>
     <true/>
